XXX/XXX.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xxx-delivery-pipelines
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: yeti1-eventsource-svc
            port:
              number: 80
        path: /webhooks/xxx/$yeti1/github-cd192e9a-8df2-11ec-9968-acde48001122
        pathType: ImplementationSpecific
